<resources>
    <string name="app_name">Awesome Chat</string>
    <string name="loginWelcome">Join the Awesome chat</string>
    <string name="loginScreen">Login</string>
    <string name="back_button">Back Button</string>
    <string name="register_screen">Sign up</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="fullname">FULL NAME</string>
    <string name="message_header">Message</string>
    <string name="language">Language</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="english">English</string>
    <string name="notification">Notification</string>
    <string name="version">Version</string>
    <string name="logout">Log out</string>
    <string name="friend_title">Friend    </string>
    <string name="personal">Personal</string>
    <string name="search_message_hint">Find messages …</string>
    <string name="search_friend_hint">Find friends …</string>
    <string name="loginFailed">Email or Password incorrect!</string>
    <string name="emailIncorrect">Email incorrect!</string>
    <string name="passwordIncorrect">Password incorrect!</string>
    <string name="registerFailed">Register failed!</string>
    <string name="getListFailed">Get list failed! Try again later!</string>
    <string name="phoneNo">PHONE NUMBER</string>
    <string name="dob">BIRTHDAY</string>
    <string name="yesterday">Yesterday</string>
    <string name="tag">\You: \</string>
    <string name="cancel">Cancel</string>
    <string name="message_seach_result">Message</string>
    <string name="enter_message">Enter Message …</string>
    <string name="LastMessageImage">A picture was sent!</string>
    <string name="send">Send</string>
    <string name="save">Save</string>
    <string name="create_message">Create Message</string>
    <string name="getGreeting">Send a wonderful greetings to your friends!</string>
    <string name="friend_list_title">FRIENDS LIST</string>
</resources>