<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title_search"
        android:textColor="#999999"
        android:text="@string/message_seach_result"
        android:textStyle="bold"
        android:layout_marginStart="12dp"
        android:gravity="top"
        android:layout_marginTop="26dp"
        android:textSize="17sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_avatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            app:border_color="#4356B4"
            android:background="@drawable/background_avatar"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_ten_banbe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fullname"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_tin_cuoi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/message_header"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="301dp"
        android:layout_marginEnd="35dp"
        android:layout_height="1dp"
        android:layout_gravity="center|right"
        android:background="#D2D2D2"/>

</LinearLayout>